# fitnes_endpoint

./: Makefile  README.md  env  pyproject.toml  setup.cfg
service/: __main__.py  __main___.py  app.py  config.py  db.py  models.py  schemas.py
service/repos/: rule.py
service/routers/: staff.py
service/worker/: home.py  source.py
